# kannolo_sisap2026_challenge

./: .dockerignore  .gitignore  CHALLENGE_GUIDE.md  Cargo.toml  Dockerfile  SISAP_README.md  SISAP_cfp.md  download_hf_dataset.py  entrypoint.sh
.github/workflows/: docker-build.yml  test-linux.yml  test-macos.yml
experiments/grids/: sisap_task3_nq_adaptive.toml
scripts/: find_best_grid_results_by_recall_range.py
src/: graph.rs  lib.rs  permutation.rs
src/indexes/: hnsw.rs
src/sisap/: mod.rs
