[package]
name = "kannolo"
version = "0.5.1"
edition = "2024"
license = "MIT"
description = "kANNolo is designed for easy prototyping of ANN Search algorithms while ensuring high effectiveness and efficiency over both dense and sparse vectors."
repository = "https://github.com/TusKANNy/kannolo"
readme = "README.md"


[dependencies]
serde       = { version = "1.0.219", features = ["derive"] }
rand        = "0.8.5"
itertools   = "0.14.0"
matrixmultiply = "0.3.8"
num-traits  = "0.2.18"
byteorder   = "1.5.0"
half        = { version = "2.4.1", features = ["serde", "std", "num-traits"] }
rayon       = "1.10.0"
bincode     = "2.0.1"
rustc-hash  = "2.1.0"
optional    = { version = "0.5.0", features = ["serde"] }
vectorium   = { git = "https://github.com/TusKANNy/vectorium.git" }
indicatif   = { version = "0.18.3", features = ["rayon"] }
clap        = { version = "4.3.19", features = ["derive"], optional = true }
pyo3        = { version = "0.24.0", features = ["extension-module"], optional = true }
numpy       = { version = "0.24.0", optional = true }
ndarray     = { version = "0.16", optional = true }
ndarray-npy = { version = "0.9", optional = true }
hdf5        = { version = "0.8", optional = true }


[features]
default      = ["sisap"]
use-libxsmm  = []
multivec     = ["vectorium/multivec"]
python       = ["dep:pyo3", "dep:numpy", "dep:ndarray", "dep:ndarray-npy"]
cli          = ["dep:clap", "dep:ndarray", "dep:ndarray-npy"]
sisap        = ["dep:clap", "dep:hdf5"]

[[bin]]
name = "hnsw_build"
path = "src/bin/hnsw_build.rs"
required-features = ["cli"]

[[bin]]
name = "hnsw_search"
path = "src/bin/hnsw_search.rs"
required-features = ["cli"]

[[bin]]
name = "hnsw_rerank_search"
path = "src/bin/hnsw_rerank_search.rs"
required-features = ["cli", "multivec"]

[[bin]]
name = "sisap_task3_build"
path = "src/bin/sisap_task3_build.rs"
required-features = ["sisap"]

[[bin]]
name = "sisap_task3_search"
path = "src/bin/sisap_task3_search.rs"
required-features = ["sisap"]

[lib]
name = "kannolo"
crate-type = ["cdylib", "lib"]

[profile.release]
opt-level = 3
debug = false
lto = false
codegen-units = 1
panic = "abort"
strip = "symbols"
